Добавляет ручки карточки группы, списка участников и смены роли участника
